[workspace]
resolver = "2"
members = [
  "cli",
  "exe/no_std",
  "exe/rust",
  "exe/rust/ddraw-sys",
  "exe/zip",
  "minibuild",
  "pe",
  "web/glue",
  "win32/derive",
  "win32/extract",
]

[workspace.dependencies]
log = "0.4"
memory = { path = "memory" }
pe = { path = "pe" }
win32 = { path = "win32" }
x86 = { path = "x86" }
tsify = "0.4.1"
# Must match version of wasm-bindgen-cli, with version pinned in CI.
wasm-bindgen = "=0.2.100"

[profile.release]
debug = true

[profile.lto]
inherits = "release"
debug = false
lto = true
