[workspace]
resolver = "2"
members = [
  "cli",
  "exe/rust",
  "exe/rust/ddraw-sys",
  "exe/zip",
  "minibuild",
  "pe",
  "web/glue",
  "win32/derive",
  "win32/extract",
  "win32/system",
  "win32/winapi",
]

[workspace.dependencies]
memory = { path = "memory" }
pe = { path = "pe" }
win32 = { path = "win32" }
x86 = { path = "x86" }

bitflags = { version = "2.9.0", features = ["serde"] }
log = "0.4"
tsify = "0.4.1"
# Must match version of wasm-bindgen-cli, with version pinned in CI.
wasm-bindgen = "=0.2.100"

[profile.release]
debug = true

[profile.lto]
inherits = "release"
debug = false
lto = true
