[workspace]
resolver = "2"
members = [
  "cli",
  "exe/rust",
  "exe/rust/ddraw-sys",
  "exe/zip",
  "minibuild",
  "pe",
  "web/glue",
  "win32/derive",
  "win32/extract",
  "win32/system",
  "win32/winapi",
  "win32/dll/advapi32",
  "win32/dll/bass",
  "win32/dll/dinput",
  "win32/dll/ole32",
  "win32/dll/oleaut32",
  "win32/dll/shlwapi",
  "win32/dll/vcruntime140",
  "win32/dll/version",
  "win32/dll/wininet",
]

[workspace.dependencies]
memory = { path = "memory" }
pe = { path = "pe" }
win32 = { path = "win32" }
win32-derive = { path = "win32/derive" }
win32-system = { path = "win32/system" }
win32-winapi = { path = "win32/winapi" }
x86 = { path = "x86" }

bitflags = { version = "2.9.0", features = ["serde"] }
log = "0.4"
tsify = "0.4.1"
# Must match version of wasm-bindgen-cli, with version pinned in CI.
wasm-bindgen = "=0.2.100"

[profile.release]
debug = true

[profile.lto]
inherits = "release"
debug = false
lto = true
