[package]
name = "retrowin32"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { workspace = true }
win32 = { workspace = true }

gdbstub = "0.7.1"
gdbstub_arch = "0.3.0"
log-crate = { version = "0.4", package = "log" }

anyhow = "1.0"
argh = "0.1.10"
libc = "0.2"

[dependencies.sdl2]
version = "0.35.2"
features = ["unsafe_textures"]
optional = true

[dependencies.iced-x86]
version = "1.17.0"
optional = true

[dependencies.unicorn-engine]
version = "2.0.0"
optional = true

[dependencies.x86]
workspace = true
optional = true

[features]
sdl = ["dep:sdl2"]
x86-emu = ["dep:x86", "dep:iced-x86", "win32/x86-emu"]
x86-64 = ["win32/x86-64"]
x86-unicorn = ["dep:unicorn-engine", "win32/x86-unicorn"]
