[package]
name = "retrowin32"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { workspace = true }
win32 = { workspace = true }

anyhow = "1.0"
argh = "0.1.10"
chrono = "0.4.38"
libc = "0.2"
typed-path = "0.9.1"

[dependencies.sdl2]
version = "0.35.2"
features = ["unsafe_textures"]
optional = true

[features]
default = ["x86-emu", "sdl"]
sdl = ["dep:sdl2"]
x86-emu = ["win32/x86-emu"]
x86-64 = ["win32/x86-64"]
x86-unicorn = ["win32/x86-unicorn"]
