[package]
name = "memory"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
serde_bytes = { version = "0.11.7", optional = true }

[dependencies.unicorn-engine]
version = "2.0.0"
optional = true

[features]
x86-emu = ["dep:serde", "dep:serde_bytes"]
x86-64 = []
x86-unicorn = ["dep:unicorn-engine"]
