[package]
name = "win32"
version = "0.1.0"
edition = "2024"

[dependencies]
log = { workspace = true }
memory = { workspace = true }
pe = { workspace = true }
win32-derive = { path = "derive" }
win32-winapi = { path = "winapi" }
x86 = { workspace = true, optional = true }

anyhow = "1.0"
bincode = "1.3.3"
bitflags = { workspace = true }
chrono = "0.4.38"
num-derive = "0.4"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
typed-path = { version = "0.9.1", default-features = false }

[dependencies.unicorn-engine]
version = "2.0.0"
optional = true

[target.'cfg(target_family = "wasm")'.dependencies]
tsify = { workspace = true }
wasm-bindgen = { workspace = true }

[features]
x86-emu = ["dep:x86"]
x86-64 = []
x86-unicorn = ["dep:unicorn-engine"]
