[package]
name = "win32"
version = "0.1.0"
edition = "2024"

[dependencies]
log = { workspace = true }
memory = { workspace = true }
pe = { workspace = true }
win32-derive = { workspace = true }
win32-system = { workspace = true }
win32-winapi = { workspace = true }
x86 = { workspace = true, optional = true }

builtin-advapi32 = { path = "dll/advapi32" }
builtin-bass = { path = "dll/bass" }
builtin-comctl32 = { path = "dll/comctl32" }
builtin-ddraw = { path = "dll/ddraw" }
builtin-dinput = { path = "dll/dinput" }
builtin-dsound = { path = "dll/dsound" }
builtin-gdi32 = { path = "dll/gdi32" }
builtin-ole32 = { path = "dll/ole32" }
builtin-oleaut32 = { path = "dll/oleaut32" }
builtin-retrowin32_test = { path = "dll/retrowin32_test" }
builtin-shlwapi = { path = "dll/shlwapi" }
builtin-user32 = { path = "dll/user32" }
builtin-vcruntime140 = { path = "dll/vcruntime140" }
builtin-version = { path = "dll/version" }
builtin-wininet = { path = "dll/wininet" }

anyhow = "1.0"
bincode = "1.3.3"
bitflags = { workspace = true }
chrono = "0.4.38"
num-derive = "0.4"
num-traits = { workspace = true }
serde = { version = "1.0", features = ["derive"] }

[dependencies.unicorn-engine]
version = "2.0.0"
optional = true

[target.'cfg(target_family = "wasm")'.dependencies]
tsify = { workspace = true }
wasm-bindgen = { workspace = true }

[features]
x86-emu = ["dep:x86"]
x86-64 = []
x86-unicorn = ["dep:unicorn-engine"]
