[package]
name = "win32"
version = "0.1.0"
edition = "2024"

[dependencies]
log = { workspace = true }
memory = { workspace = true }
win32-system = { workspace = true }
win32-winapi = { workspace = true }

unicorn-engine = { version = "2.0.0", optional = true }
x86 = { workspace = true, optional = true }

builtin-advapi32 = { path = "dll/advapi32" }
builtin-bass = { path = "dll/bass" }
builtin-comctl32 = { path = "dll/comctl32" }
builtin-ddraw = { path = "dll/ddraw" }
builtin-dinput = { path = "dll/dinput" }
builtin-dsound = { path = "dll/dsound" }
builtin-gdi32 = { path = "dll/gdi32" }
builtin-kernel32 = { path = "dll/kernel32" }
builtin-ntdll = { path = "dll/ntdll" }
builtin-ole32 = { path = "dll/ole32" }
builtin-oleaut32 = { path = "dll/oleaut32" }
builtin-retrowin32_test = { path = "dll/retrowin32_test" }
builtin-shlwapi = { path = "dll/shlwapi" }
builtin-ucrtbase = { path = "dll/ucrtbase" }
builtin-user32 = { path = "dll/user32" }
builtin-vcruntime140 = { path = "dll/vcruntime140" }
builtin-version = { path = "dll/version" }
builtin-wininet = { path = "dll/wininet" }
builtin-winmm = { path = "dll/winmm" }

[features]
x86-emu = ["dep:x86", "memory/mem-box", "builtin-kernel32/x86-emu"]
x86-64 = ["memory/mem-raw"]
x86-unicorn = ["dep:unicorn-engine", "memory/mem-box"]
wasm = ["win32-system/wasm"]
