[package]
name = "x86"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { workspace = true }
memory = { workspace = true }

bitflags = { workspace = true }
extended = "0.1.0"
iced-x86 = "1.17.0"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(target_family = "wasm")'.dependencies]
tsify = { workspace = true }
wasm-bindgen = { workspace = true }
