[package]
name = "x86"
version = "0.1.0"
edition = "2024"

[dependencies]
log = { workspace = true }
memory = { workspace = true }

bitflags = { workspace = true }
extended = "0.1.0"
# We bring in the whole dang futures crate just to create a noop waker, jeez.
futures = "0.3.31"
iced-x86 = "1.17.0"
num-traits = { workspace = true }
serde = { version = "1.0", features = ["derive"] }

# wasm-only:
tsify = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }

[features]
wasm = ["dep:tsify", "dep:wasm-bindgen"]
