[package]
name = "gdi"
version = "0.1.0"
edition = "2021"

[dependencies]

[dependencies.windows-sys]
version = "0.52.0"
features = [
  "Win32_Foundation",
  "Win32_System_Console",
  "Win32_System",
  "Win32_System_IO",
  "Win32_Storage_FileSystem",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI",
  "Win32",
  "Win32_Graphics_Gdi",
]
