[package]
name = "exe"
version = "0.1.0"
build = "build.rs"
edition = "2021"

# Note: for compatibility with i586-pc-windows-msvc (and not just i686),
# we need windows-sys to pick up a newer windows-targets dep:
# https://github.com/microsoft/windows-rs/issues/3006
# This is apparently picked up in the lock file.

[dependencies.windows-sys]
version = "0.52.0"
features = [
  "Win32_Foundation",
  "Win32_System_Console",
  "Win32_System",
  "Win32_System_IO",
  "Win32_Storage_FileSystem",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI",
  "Win32",
  "Win32_Graphics_Gdi",
]
