[package]
name = "exe"
version = "0.1.0"
build = "build.rs"
edition = "2024"

# Note that windows-sys versions 0.59+ break rust-analyzer:
# https://github.com/microsoft/windows-rs/issues/3440

[dependencies.windows-sys]
version = "0.52.0"
features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Console",
  "Win32_System",
  "Win32_System_IO",
  "Win32_Storage_FileSystem",
  "Win32_System_Environment",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI",
  "Win32",
  "Win32_Graphics_Gdi",
]

[dependencies.ddraw-sys]
path = "ddraw-sys"
