[package]
name = "glue"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = { workspace = true }
win32 = { workspace = true }
x86 = { workspace = true }

anyhow = "1.0"
js-sys = "0.3.69"
serde = "1.0"
serde_json = "1.0"
tsify = "0.4.1"

[dependencies.wasm-bindgen]
version = "0.2.83"
# features = ["xxx_debug_only_print_generated_code"]

[dependencies.web-sys]
version = "0.3.69"
features = [
  "CanvasRenderingContext2d",
  "ImageData",
  "Event",
  "HtmlCanvasElement",
  "MouseEvent",
  "Performance",
]

[features]
default = ["x86-emu"]
x86-emu = ["win32/x86-emu"]
