[package]
name = "glue"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = { workspace = true }
win32 = { workspace = true }
x86 = { workspace = true }

anyhow = "1.0"
chrono = { workspace = true }
js-sys = "0.3.69"
serde = "1.0"
serde_json = "1.0"
tsify = { workspace = true }
wasm-bindgen = { workspace = true }

# [dependencies.wasm-bindgen]
# features = ["xxx_debug_only_print_generated_code"]

[dependencies.web-sys]
version = "0.3.69"
features = [
  "CanvasRenderingContext2d",
  "ImageData",
  "Event",
  "HtmlCanvasElement",
  "MouseEvent",
  "Performance",
]

[features]
# We always need x86-emu to build this, but leaving it off by default
# lets rust-analyzer analyze the project in non-x86-emu modes.
x86-emu = ["win32/x86-emu"]
