[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.3"
console_log = "0.2.0"
js-sys = "0.3.60"
log = "0.4.17"
serde_json = "1.0"
wasm-bindgen = "0.2.83"

[dependencies.win32]
path = "../../win32"
version = "0.1.0"

# wasm-pack --profiling mode doesn't work without this
# https://github.com/rustwasm/wasm-pack/issues/797
[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ['-O4', '-g']
