[package]
name = "win32-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0"
argh = "0.1.10"
proc-macro2 = "1.0"
quote = "1.0"

[dependencies.syn]
version = "2.0"
default-features = false
features = ["extra-traits", "full", "parsing", "printing", "proc-macro"]
