[package]
name = "win32-system"
version = "0.1.0"
edition = "2024"

[dependencies]
log = { workspace = true }
memory = { workspace = true }
pe = { workspace = true }
win32-derive = { workspace = true }
win32-winapi = { workspace = true }

chrono = "0.4.38"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(target_family = "wasm")'.dependencies]
tsify = { workspace = true }
wasm-bindgen = { workspace = true }
