[package]
name = "builtin-kernel32"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bitflags = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
pe = { workspace = true }
memory = { workspace = true }
win32-derive = { workspace = true }
win32-system = { workspace = true }
win32-winapi = { workspace = true }

[features]
x86-emu = []
