[package]
name = "builtin-winmm"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = { workspace = true }
builtin-user32 = { path = "../user32" }
log = { workspace = true }
memory = { workspace = true }
win32-derive = { workspace = true }
win32-system = { workspace = true }
win32-winapi = { workspace = true }
